--- a/Deployment.yaml
+++ b/Deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
 metadata:
-  name: Belajar-docker-Jenkins-Integrations
+  name: jenkins-integration
 spec:
   selector:
     matchLabels:
@@ -13,7 +13,7 @@ spec:
         app: java
     spec:
       containers:
-        - name: Belajar-docker-Jenkins-Integrations
+        - name: belajar-docker
           image: artdengun/Belajar-docker-Jenkins-Integrations
           ports:
             - containerPort: 80
