--- a/Deployment.yaml
+++ b/Deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
 metadata:
-  name: jenkins-integration
+  name: belajar-docker-jenkins-integration
 spec:
   selector:
     matchLabels:
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: belajar-docker
-          image: artdengun/Belajar-docker-Jenkins-Integrations
+          image: artdengun/belajar-docker-jenkins-integration
           ports:
             - containerPort: 80
