--- a/Deployment.yaml
+++ b/Deployment.yaml
@@ -13,7 +13,7 @@ spec:
         app: java
     spec:
       containers:
-        - name: belajar-docker
+        - name: belajar-docker-jenkins-integration
           image: artdengun/belajar-docker-jenkins-integration
           ports:
             - containerPort: 80
