--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <properties>
+        <java.version>1.8</java.version>
+        <packaging>jar</packaging>
+    </properties>
+
     <groupId>org.example</groupId>
     <artifactId>Belajar-docker-Jenkins-Integrations</artifactId>
     <version>1.0-SNAPSHOT</version>
