add config kubernetes

--- a/Deployment.yaml
+++ b/Deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
 metadata:
-  name: belajar-docker-jenkins-integration
+  name: java-jenkins
 spec:
   selector:
     matchLabels:
@@ -13,7 +13,22 @@ spec:
         app: java
     spec:
       containers:
-        - name: belajar-docker-jenkins-integration
+        - name: belajar-docker-jenkins-integrations
           image: artdengun/belajar-docker-jenkins-integration
           ports:
             - containerPort: 80
+---
+# https://kubernetes.io/docs/concepts/services-networking/service/#defining-a-service
+kind: Service
+apiVersion: v1
+metadata:
+  name: java-jenkins-service
+spec:
+  selector:
+    app: java
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
+      nodePort: 32000
+  type: NodePort
